--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,7 +10,9 @@ body {
     position: relative;
     font-weight: 400px;
 }
-
+div#root {
+    background-image: url(https://thumbs.dreamstime.com/b/background-fashion-icons-pink-trendy-clothes-shoes-accessories-114553370.jpg);
+}
 ul li {
     list-style: none;
 }
@@ -133,7 +135,9 @@ a#scrollUp i {
 .fa-google-plus:hover {
     background: #CE3C2D;
 }
-
+.header-middle {
+    background-color: #b2636f;
+}
 .header-middle .container .row {
     border-bottom: 1px solid #f5f5f5;
     margin-left: 0;
@@ -198,8 +202,7 @@ a#scrollUp i {
 }
 
 .shop-menu ul li a {
-    background: #FFFFFF;
-    color: #696763;
+    color: #ffffff;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 300;
@@ -220,6 +223,9 @@ a#scrollUp i {
 .header-bottom {
     padding-bottom: 30px;
     padding-top: 30px;
+    background-color: #ffffff;
+    width: 77%;
+    margin-left: 11.5%;
 }
 
 .navbar-collapse.collapse {
@@ -585,7 +591,6 @@ ul.sub-menu {
     color: #B4B1AB;
     font-family: abel;
     font-size: 48px;
-    margin-top: 115px;
 }
 
 .item h1 span {
@@ -717,7 +722,9 @@ h2.title:before {
     text-decoration: none;
     text-transform: uppercase;
 }
-
+.bg-white{
+    background-color:#ffffff
+}
 .panel-group .panel-heading+.panel-collapse .panel-body {
     border-top: 0 none;
 }
